cmake_minimum_required(VERSION 3.0.0)
project(mr_redis VERSION 0.1.0)

find_package(Git QUIET)
if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
# Update submodules as needed
    option(GIT_SUBMODULE "Check submodules during build" ON)

    if(GIT_SUBMODULE)
        message(STATUS "Submodule update")
        execute_process(
            COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
            RESULT_VARIABLE GIT_SUBMOD_RESULT
        )

        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
            message(
                FATAL_ERROR "\
                    git submodule update --init --recursive failed with \
                    ${GIT_SUBMOD_RESULT}, please checkout submodules.\
                "
            )
        endif()
    endif()
endif()

if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/mister/CMakeLists.txt")
    message(
        FATAL_ERROR "\
            The submodules were not downloaded! GIT_SUBMODULE was turned off \
            or failed. Please update submodules and try again.\
        "
    )
endif()

include(CTest)
enable_testing()

add_library(mr_redis mr_redis.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
